# game-of-life

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt
app/: game.cpp  game.h  main.cpp
cmake/: icon.icns
src/: Life.cpp  Life.h
tests/: life_tests.cpp
